# gone-phishin-xgov-hackathon

./: .gitignore  AWS_setup.sh  Continuous_Text_Service.service  README.md  main.py  pyproject.toml  requirements.txt  utils.py  wsgi.py
flask_app/: app.py  containers.json  dockerfile  extraction.py  public-endpoint.json  pyproject.toml  requirements.txt  website.html  whitelist.csv  xg_model.pkl
functions/: preprocessing.py
models/: xg_model.pkl
notebooks/: ml_model.ipynb  notify_sandbox.ipynb
presentations/: Gone Phishin'.pptx
scripts/: Extraction.py
