[tool.poetry]
name = "gone-phishin-xgov-hackathon"
version = "0.1.0"
description = ""
authors = ["Gone Phisin"]
readme = "README.md"
packages = [{include = "gone_phishin_xgov_hackathon"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2.3"
pandas = "^1.5.3"
scikit-learn = "^1.2.2"
regex = "^2023.3.23"
tld = "^0.13"
xgboost = "^1.7.4"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
