[tool.poetry]
name = "flask-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "flask_app"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.3"
pandas = "^2.0.0"
regex = "^2023.3.23"
tld = "^0.13"
xgboost = "^1.7.5"
scikit-learn = "^1.2.2"
flask-cors = "^3.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
